Do we need condition

--- a/.github/workflows/oracle-db-duplicate-debug.yml
+++ b/.github/workflows/oracle-db-duplicate-debug.yml
@@ -469,6 +469,7 @@ jobs:
   oracle-rman-duplicate-check:
     name: oracle-rman-duplicate-check
     needs: [oracle-rman-duplicate]
+    if: ${{ ( needs.oracle-rman-duplicate.result == 'success' || needs.oracle-rman-duplicate.result == 'skipped' ) }}
     environment: ${{ github.event.client_payload.TargetEnvironment }}-preapproved
     runs-on: ubuntu-latest
     container:
