--- a/.github/workflows/oracle-db-duplicate-debug.yml
+++ b/.github/workflows/oracle-db-duplicate-debug.yml
@@ -541,7 +541,7 @@ jobs:
             ansible/hosts
             ansible/group_vars
           path: inventory
-          ref: DBA-767
+          ref: main
           fetch-depth: 0
 
       - name: Checkout Ansible Required Roles From modernisation-platform-configuration-management
@@ -553,7 +553,7 @@ jobs:
             ansible/roles/secretsmanager-passwords
             ansible/roles/get-modernisation-platform-facts
           path: roles
-          ref: DBA-767
+          ref: main
           fetch-depth: 0
 
       - name: Start Ansible Oracle RMAN Post Duplicate
